Added Scroll Inversion and added slot keybinds and emote keybinds

--- a/FlashUtils.csproj
+++ b/FlashUtils.csproj
@@ -24,5 +24,17 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>libs\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine">
+      <HintPath>libs\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>libs\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.InputSystem">
+      <HintPath>libs\Unity.InputSystem.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Netcode.Runtime">
+      <HintPath>libs\Unity.Netcode.Runtime.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
